add category api
