# app/Virtual/Models/Category.php
@@ -1,0 +1,80 @@
+<?php
+
+namespace App\Virtual\Models;
+
+use DateTime;
+
+/**
+ * @OA\Schema(
+ *     title="Category",
+ *     description="Category model",
+ *     @OA\Xml(
+ *         name="Category"
+ *     )
+ * )
+ */
+class Category
+{
+
+    /**
+     * @OA\Property(
+     *     title="ID",
+     *     description="ID",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var integer
+     */
+    private int $id;
+
+    /**
+     * @OA\Property(
+     *      title="Name",
+     *      description="Name of the category",
+     *      example="Category"
+     * )
+     *
+     * @var string
+     */
+    public string $name;
+
+    /**
+     * @OA\Property(
+     *     title="Created at",
+     *     description="Created at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var DateTime
+     */
+    private DateTime $created_at;
+
+    /**
+     * @OA\Property(
+     *     title="Updated at",
+     *     description="Updated at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var DateTime
+     */
+    private DateTime $updated_at;
+
+    /**
+     * @OA\Property(
+     *     title="Deleted at",
+     *     description="Deleted at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var DateTime
+     */
+    private DateTime $deleted_at;
+}
