# storage/api-docs/api-docs.json
@@ -128,6 +128,144 @@
                 ]
             }
         },
+        "/category": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Index",
+                "description": "List all categories with pagination",
+                "operationId": "category-index",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "page",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "per_page",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Filter",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CategoryPaginateResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Store",
+                "description": "Create new category",
+                "operationId": "category-post",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CategoryResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Content",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnprocessableCategory"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/email/verification-notification": {
             "post": {
                 "tags": [
@@ -291,12 +429,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
+                }
             }
         },
         "/password/reset-password": {
@@ -348,12 +481,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
+                }
             }
         }
     },
@@ -372,6 +500,50 @@
                 "type": "object",
                 "xml": {
                     "name": "ErrorResource"
+                }
+            },
+            "Category": {
+                "title": "Category",
+                "description": "Category model",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the category",
+                        "type": "string",
+                        "example": "Category"
+                    },
+                    "created_at": {
+                        "title": "Created at",
+                        "description": "Created at",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    },
+                    "updated_at": {
+                        "title": "Updated at",
+                        "description": "Updated at",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    },
+                    "deleted_at": {
+                        "title": "Deleted at",
+                        "description": "Deleted at",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Category"
                 }
             },
             "User": {
@@ -423,6 +595,22 @@
                 "xml": {
                     "name": "User"
                 }
+            },
+            "CategoryRequest": {
+                "title": "Password user request",
+                "description": "Password user request body data",
+                "required": [
+                    "email"
+                ],
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the new category",
+                        "type": "string",
+                        "example": "Category x"
+                    }
+                },
+                "type": "object"
             },
             "LoginRequest": {
                 "title": "Login user request",
@@ -500,6 +688,75 @@
                 },
                 "type": "object"
             },
+            "CategoryPaginateResource": {
+                "title": "Category index",
+                "description": "Category Content",
+                "properties": {
+                    "data": {
+                        "title": "data",
+                        "description": "Category data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Category"
+                        }
+                    },
+                    "links": {
+                        "$ref": "#/components/schemas/LinksResource"
+                    },
+                    "meta": {
+                        "$ref": "#/components/schemas/MetaResource"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Category"
+                }
+            },
+            "CategoryResource": {
+                "title": "Category index",
+                "description": "Category Content",
+                "properties": {
+                    "data": {
+                        "title": "data",
+                        "description": "Category data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Category"
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Category"
+                }
+            },
+            "UnprocessableCategory": {
+                "title": "Unprocessable",
+                "description": "Unprocessable Content",
+                "properties": {
+                    "message": {
+                        "title": "message",
+                        "description": "Error Message",
+                        "type": "string"
+                    },
+                    "errors": {
+                        "title": "errors",
+                        "properties": {
+                            "name": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Unprocessable"
+                }
+            },
             "EmailResource": {
                 "title": "Email Resource",
                 "description": "Email resource",
@@ -572,6 +829,119 @@
                     "name": "Unprocessable"
                 }
             },
+            "LinksResource": {
+                "title": "Links Paginate",
+                "description": "Link Paginate Content",
+                "properties": {
+                    "self": {
+                        "title": "self",
+                        "description": "self data",
+                        "type": "string",
+                        "example": "link-value"
+                    },
+                    "first": {
+                        "title": "first",
+                        "description": "First data",
+                        "type": "string",
+                        "example": "http://localhost:8000/api/v1/resource?page=1"
+                    },
+                    "last": {
+                        "title": "last",
+                        "description": "Last data",
+                        "type": "string",
+                        "example": "http://localhost:8000/api/v1/resource?page=3"
+                    },
+                    "prev": {
+                        "title": "prev",
+                        "description": "Prev data",
+                        "type": "string",
+                        "example": null
+                    },
+                    "next": {
+                        "title": "next",
+                        "description": "Next data",
+                        "type": "string",
+                        "example": "http://localhost:8000/api/v1/resource?page=2"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Links"
+                }
+            },
+            "MetaResource": {
+                "title": "Links Paginate",
+                "description": "Link Paginate Content",
+                "properties": {
+                    "current_page": {
+                        "title": "current_page",
+                        "description": "current_page data",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "from": {
+                        "title": "from",
+                        "description": "from data",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "last_page": {
+                        "title": "last_page",
+                        "description": "last_page data",
+                        "type": "integer",
+                        "example": 3
+                    },
+                    "links": {
+                        "title": "links",
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "url": {
+                                    "type": "string",
+                                    "example": "http://localhost:8000/api/v1/resource?page=1"
+                                },
+                                "label": {
+                                    "type": "string",
+                                    "example": "1"
+                                },
+                                "active": {
+                                    "type": "string",
+                                    "example": true
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "path": {
+                        "title": "path",
+                        "description": "path data",
+                        "type": "string",
+                        "example": "http://localhost:8000/api/v1/resource"
+                    },
+                    "per_page": {
+                        "title": "per_page",
+                        "description": "per_page data",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "to": {
+                        "title": "to",
+                        "description": "to data",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "total": {
+                        "title": "total",
+                        "description": "total data",
+                        "type": "integer",
+                        "example": 1
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Links"
+                }
+            },
             "PasswordResource": {
                 "title": "PasswordResource user",
                 "description": "PasswordResource Content",
@@ -588,7 +958,7 @@
                 }
             },
             "UnprocessablePassword": {
-                "title": "Unprocessable login",
+                "title": "Unprocessable",
                 "description": "Unprocessable Content",
                 "properties": {
                     "message": {
@@ -597,24 +967,16 @@
                         "type": "string"
                     },
                     "errors": {
-                        "$ref": "#/components/schemas/UnprocessablePasswordErrors"
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "Unprocessable"
-                }
-            },
-            "UnprocessablePasswordErrors": {
-                "title": "Unprocessable login errors",
-                "description": "Unprocessable Content",
-                "properties": {
-                    "email": {
-                        "title": "email",
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        }
+                        "title": "errors",
+                        "properties": {
+                            "email": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "object"
                     }
                 },
                 "type": "object",
